Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66615

Uninitialized bitfield in QRasterPaintEngineState

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.11.0
    • 5.10.1
    • GUI: Painting
    • None
    • Red Hat Enterprise Linux 7, Qt 5.10.1, gcc 7.3.0, Valgrind 3.13.0
    • 41db3140a90e1c19687a49b99293a6e5c0974e6b

    Description

      The default constructor of QRasterPaintEngineState misses initialization of bitfield "non_complex_pen". This leads to Valgrind error messages of type "Conditional jump or move depends on uninitialised value(s)".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chehrlic Christian Ehrlicher
            pkl217 Peter Klotz
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes